--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.0
 uvicorn[standard]==0.31.0
 supabase==2.9.1
 gspread==6.1.4
+oauth2client==4.1.3
 google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 google-api-python-client==2.116.0
